# Y-Trace

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Y-Trace.code-workspace
.eide/: eide.yml  files.options.yml
.omx/team/execute-the-approved-4fc22742/: worker-4-verification-readiness.md
Application/: app_init.c  app_init.cpp  main.c
Application/map/: map_benchmark.c  map_benchmark.h  ytrace_map_tiles.c  ytrace_map_tiles.h
Application/port/: diskio.c  littlefs_if.hpp  lvgl_port.c  lvgl_port.h
Application/sample/: fatfs_sd_bench.c  gnss_sample.c  imu_sample.c  lcd_refresh_sample.c  mag_sample.c  sample.h
Application/storage/: storage_init.c  vfs.c  vfs.h  vfs_cache.c  vfs_cache.h  vfs_fatfs.c  vfs_fatfs.h  vfs_littlefs.c  vfs_littlefs.h  vfs_selftest.c
Application/system/: VirtualBus.hpp
Application/system/vfs/: IFileSystem.hpp  file.hpp  vfs.cpp  vfs.hpp
Board/: at32f403a_407_int.c  board.c  board.h  rtconfig.h  syscall.c  syscall.cpp
Board/Drivers/: drv_common.h  drv_flash.c  drv_flash.h  drv_gnss.c  drv_gnss.h  drv_imu.c  drv_imu.h  drv_lcd.c  drv_lcd.h  drv_lis3mdltr.c  drv_lis3mdltr.h  drv_lsm6dsm.c  drv_lsm6dsm.h  drv_pin.c  drv_pin.h  drv_rtt.c  drv_rtt.h  drv_sdio.c  drv_sdio.h  drv_soft_iic.c  drv_soft_iic.h  drv_sram.c  drv_sram.h  drv_uart.c  drv_uart.h  drv_ws2812b.c  drv_ws2812b.h
Board/misc/: AT32F403AxG_FLASH.ld  startup_at32f403a_407.s
Middlewares/: lv_conf.h
Middlewares/littlefs/: CMakeLists.txt
Middlewares/rt-thread/: CMakeLists.txt
Middlewares/rt-thread/components/finsh/: finsh_port.c
Middlewares/rt-thread/components/ipc/: completion.c  dataqueue.c  ringblk_buf.c  ringbuffer.c
Middlewares/rt-thread/components/ipc/include/: dataqueue.h  ringbuffer.h
Middlewares/rt-thread/components/ulog/: ulog.c  ulog_def.h
Middlewares/rt-thread/components/ulog/backend/: console_be.c
Middlewares/rt-thread/components/utest/: utest.c  utest.h
Middlewares/rt-thread/libcpu/arm/cortex-m4/: CMakeLists.txt
Middlewares/rt-thread/src/: CMakeLists.txt  components.c
Test/: CMakeLists.txt  CMakePresets.json  README.md  fatfs_test.cpp  littlefs_test.cpp  map_tile_benchmark_static_check.py  test_imu_driver_contract.c  test_minmea.c  test_vfs_cache.c  test_vfs_core.c  test_ws2812b_driver_contract.c  test_ytrace_map_tiles.c  vfs_test.cpp
Test/unity/: README.md
Test/unity/src/: unity.c  unity.h
cmake/: newlib_heap_bridge.c  options.cmake  sources.cmake
cmake/toolchains/: arm-none-eabi.cmake
docs/: cmake-migration.md  fatfs-sdio-benchmark.md  map-tile-benchmark-verification.md
docs/superpowers/plans/: 2026-06-14-vfs-implementation.md
docs/superpowers/specs/: 2026-06-14-vfs-design.md
libraries/cmsis/cm4/device_support/startup/gcc/: startup_at32f403a_407.s
libraries/drivers/src/: at32f403a_407_crm.c
tools/: generate_ytrace_map_tiles.py  verify_ytrace_map_tiles.py
